add:fix:refactor-> product layout, fixed axios service, async awit bug, refactor reducer

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1"
     />
   </head>
-  <body class="bg-gray-50">
+  <body class="bg-gray-50 antialiased">
     <div id="root"></div>
   </body>
 </html>
