SEO: added react helmet

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,33 @@
       name="viewport"
       content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1"
     />
+    <!-- Primary Meta Tags -->
+    <title>DogeMart</title>
+    <meta name="title" content="DogeMart" />
+    <meta
+      name="description"
+      content="The one stop destination for you shopping needs! Sign up and get extra 10% cashback. "
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://doge-mart.netlify.app/" />
+    <meta property="og:title" content="DogeMart" />
+    <meta
+      property="og:description"
+      content="The one stop destination for you shopping needs! Sign up and get extra 10% cashback. "
+    />
+    <meta property="og:image" content="https://i.imgur.com/JZ0wpbM.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://doge-mart.netlify.app/" />
+    <meta property="twitter:title" content="DogeMart" />
+    <meta
+      property="twitter:description"
+      content="The one stop destination for you shopping needs! Sign up and get extra 10% cashback. "
+    />
+    <meta property="twitter:image" content="https://i.imgur.com/JZ0wpbM.png" />
   </head>
   <body class="bg-gray-50 antialiased">
     <div id="root"></div>
